2011-09-18  Paul Smith  <psmith@gnu.org>

	* main.c (main): If we're re-exec'ing and we're the master make,
	then restore the job_slots value so it goes back into MAKEFLAGS
	properly.  See Savannah bug #33873.

	* remake.c (library_search): STD_DIRS is computed when other
	static vars like buflen etc. are computed, so it must be static
	as well.  See Savannah bug #32511.

2011-09-16  Paul Smith  <psmith@gnu.org>

	* maintMakefile (do-po-update): Apparently we have to avoid
	certificate checks on the http://translationproject.org site now.

2011-09-12  Paul Smith  <psmith@gnu.org>

	* read.c (eval): Ensure exported variables are defined in the
	global scope.  Fixes Savannah bug #32498.

2011-09-11  Paul Smith  <psmith@gnu.org>

	* Makefile.am (dist-hook): Remove w32/Makefile and .deps/ from the
	dist file.  Fixes Savannah bug #31489.

	* doc/make.texi (Complex Makefile): Add a hint about using
	#!/usr/bin/make (for Savannah support request #106459)

2011-09-02  Paul Smith  <psmith@gnu.org>

	* remake.c (touch_file): If we have both -n and -t, -n takes
	precedence.  Patch from Michael Witten <mfwitten@gmail.com>

2011-08-29  Paul Smith  <psmith@gnu.org>

	* expand.c (variable_expand_string): Always allocate a new buffer
	for a string we're expanding.  The string we're working on can get
	freed while we work on it (for example if it's the value of a
	variable which modifies itself using an eval operation).
	See Savannah patch #7534 for the original report by Lubomir Rintel.

2011-06-12  Paul Smith  <psmith@gnu.org>

	* read.c (parse_file_seq): Move the check for empty members out of
	the loop so we can go to the next member properly.
	Another fix for Savannah bug #30612.

	* config.h-vms.template: Newer versions of VMS have strncasecmp()
	Patch provided by: Hartmut Becker <becker.ismaning@freenet.de>

2011-05-07  Paul Smith  <psmith@gnu.org>

	* expand.c (variable_append): Add a LOCAL argument to track
	whether this is the first invocation or not.  If it's not and